找回密码发邮件 完成

--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -31,7 +31,7 @@
                     </div>
                 </h2>
 
-                <div class="ui stacked segment">
+                <div class="ui stacked black segment">
                     <div class="field">
                         <div class="ui transparent left icon input">
                             <i class="mail icon"></i>
