--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,10 +1,10 @@
 <div class="ui middle aligned center aligned grid">
     <div class="column">
         <form class="ui large form" style="margin-top: 60%" action="/login" method="post" id="login">
-            <a class="ui right corner label" id="sign_up_icon" href="{{ url_for('auth.signup') }}">
+            <a class="ui right corner black label" id="sign_up_icon" href="{{ url_for('auth.signup') }}">
                 <i class="edit icon" style="cursor: pointer"></i>
             </a>
-            <div class="ui stacked segment">
+            <div class="ui stacked black segment">
                 <div class="field">
                     <div class="ui transparent left icon input">
                         <i class="mail icon"></i>
@@ -21,7 +21,7 @@
                     <div class="ui transparent left icon input">
                         <i class="calculator icon"></i>
                         <input type="text" name="captcha" placeholder="Captcha" onblur="blurRemoveErrorPrompt(this)">
-                        <a onclick="getLoginCaptcha()"><img style="width: 80px;height: 24px" id="login_captcha"></a>
+                        <a style="cursor: pointer" onclick="getLoginCaptcha()"><img style="width: 80px;height: 24px" id="login_captcha"></a>
                     </div>
                 </div>
                 <div class="ui fluid transparent animated fade black submit button" onclick="submitLoginForm()">
@@ -31,10 +31,22 @@
                     </div>
                 </div>
                 <div style="margin-top: 2%;text-align: right">
-                    <i class="search icon"></i><a href="/">find password</a>
+                    <i class="search icon"></i><a style="cursor: pointer" onclick="showFindPasswordBox()">find password</a>
                 </div>
             </div>
             <div class="ui error message"></div>
         </form>
+
+        <div class="ui segment" id="find_pass_word" hidden>
+            <form class="ui large form" id="find_pass_word_form">
+                <div class="field">
+                    <div class="ui transparent left icon input">
+                        <i class="search icon"></i>
+                        <input type="email" name="find_password_email" placeholder="Email" onblur="blurRemoveErrorPrompt(this)">
+                        <div class="ui mini black submit button" onclick="submitFindPasswordForm(this)">Send email</div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
