重置密码 完成

--- a/templates/auth/reset_password.html
+++ b/templates/auth/reset_password.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-ssss
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+    Cack|重设密码
+{% endblock %}
+
+{% block styles %}
+    {{ super() }}
+    <style type="text/css">
+        body > .grid {
+            height: 100%;
+        }
+        .column {
+            max-width: 450px;
+        }
+    </style>
+{% endblock %}
+
+{% block content %}  <!-- 内容区 -->
+    <div class="ui middle aligned center aligned grid">
+        <div class="column">
+            <form class="ui large form" style="margin-top: 30%" action="{{ request.url }}" method="post" id="reset_password">
+
+                <h2 class="ui header">
+                    <i class="edit icon"></i>
+                    <div class="content">
+                        Reset password
+                        <div class="sub header">
+                            Writing carefully.
+                        </div>
+                    </div>
+                </h2>
+
+                <div class="ui stacked black segment">
+                    <div class="field">
+                        <div class="ui transparent left icon input">
+                            <i class="lock icon"></i>
+                            <input type="password" name="password" placeholder="Password" onblur="blurRemoveErrorPrompt(this)">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui transparent left icon input">
+                            <i class="repeat icon"></i>
+                            <input type="password" name="confirm" placeholder="Confirm Password" onblur="blurRemoveErrorPrompt(this)">
+                        </div>
+                    </div>
+                    <div class="ui fluid transparent animated fade black submit button" onclick="submitResetPasswordForm()">
+                        <div class="visible content">Submit</div>
+                        <div class="hidden content">
+                            <i class="write icon"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="ui error message"></div>
+            </form>
+        </div>
+    </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script src="{{ url_for('static', filename='js/auth/reset_password.js') }}"></script>
+{% endblock %}
