--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="field">
                         <div class="ui transparent left icon input">
-                            <i class="lock icon"></i>
+                            <i class="repeat icon"></i>
                             <input type="password" name="confirm" placeholder="Confirm Password" onblur="blurRemoveErrorPrompt(this)">
                         </div>
                     </div>
