重置密码提示完成 完成

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -48,5 +48,11 @@
                 </div>
             </form>
         </div>
+        <div class="ui icon warning message" id="loading_message" style="display: none">
+            <i class="notched circle loading icon"></i>
+            <div class="content">
+                <p>Email has been sent, check your email.</p>
+            </div>
+        </div>
     </div>
 </div>
