--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -72,6 +72,7 @@
                 </div>
                 <div class="ui error message"></div>
             </form>
+            <div class="ui warning message"><i class="icon help"></i> Already signed up? <a href="/">Login here</a> instead. </div>
         </div>
     </div>
 {% endblock %}
