--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -72,7 +72,18 @@
                 </div>
                 <div class="ui error message"></div>
             </form>
-            <div class="ui warning message"><i class="icon help"></i> Already signed up? <a href="/">Login here</a> instead. </div>
+            <div class="ui icon warning message" id="loading_message" style="display: none">
+                <i class="notched circle loading icon"></i>
+                <div class="content">
+                    <p>Email has been sent, check your email.</p>
+                </div>
+            </div>
+            <div class="ui floating message">
+                <i class="icon help"></i>
+                Already signed up?
+                <a href="/">Login here</a>
+                instead.
+            </div>
         </div>
     </div>
 {% endblock %}
