登录验证码只能输入数字

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -20,7 +20,7 @@
                 <div class="field">
                     <div class="ui transparent left icon input">
                         <i class="calculator icon"></i>
-                        <input type="text" name="captcha" placeholder="Captcha" onblur="blurRemoveErrorPrompt(this)">
+                        <input type="text" name="captcha" placeholder="Captcha(the result of right image)" onblur="blurRemoveErrorPrompt(this)" id="captcha_input">
                         <a style="cursor: pointer" onclick="getLoginCaptcha()"><img style="width: 80px;height: 24px" id="login_captcha"></a>
                     </div>
                 </div>
