--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,20 @@
 </head>
 
 <body>
-    {% block navigation %}  <!-- 导航区 -->
-    {% endblock %}
-
     <div class="ui main container">
+        {% block navigation %}  <!-- 导航区 -->
+            {% if current_user.is_authenticated %}
+                <div class="ui secondary pointing menu">
+                    <a class="item active">Home </a>
+                    <a class="item">Messages </a>
+                    <a class="item">Friends </a>
+                    <div class="right menu">
+                        <a class="ui item" href="/logout">Logout </a>
+                    </div>
+                </div>
+            {% endif %}
+        {% endblock %}
+
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 <ul class=flashes>
@@ -36,7 +46,9 @@
                 </ul>
             {% endif %}
         {% endwith %}
+    </div>
 
+    <div class="ui main container">
         {% block content %}  <!-- 内容区 -->
         {% endblock %}
     </div>
