--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -13,12 +13,75 @@
         .column {
             max-width: 450px;
         }
+        *{
+		    margin: 0;
+		    padding: 0;
+		}
+		body{
+		    font: 14px/2 'Microsoft YaHei', 'Arial';
+		}
+		li{
+		    list-style: none;
+		}
+		li img{
+            width: 100%;
+            height: 280px;
+		    display: block;
+		    margin: 0 auto;
+		}
+		.hiSlider{
+		    overflow: hidden;
+		    height: 280px;
+		    width: 100%;
+		    background: #eee;
+		}
+		.hiSlider-item{
+		    float: left;
+		}
     </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.hiSlider.min.css') }}">
 {% endblock %}
 
 {% block content %}  <!-- 内容区 -->
     {% if current_user.is_authenticated %}
+        <div class="ui vertical segment">
+            <div class="ui raised segment" style="text-align: center">
 
+                <ul class="hiSlider hiSlider1">
+                    <li data-title="11111" class="hiSlider-item">
+                        <a href="http://baidu.com" target="_blank">
+                            <img src="{{ url_for('static', filename='images/1.jpg') }}" alt="11111">
+                        </a>
+                    </li>
+                    <li data-title="22222" class="hiSlider-item">
+                        <a href="http://baidu.com" target="_blank">
+                            <img src="{{ url_for('static', filename='images/2.jpg') }}" alt="22222">
+                        </a>
+                    </li>
+                    <li data-title="33333" class="hiSlider-item">
+                        <a href="http://baidu.com" target="_blank">
+                            <img src="{{ url_for('static', filename='images/3.jpg') }}" alt="33333">
+                        </a>
+                    </li>
+                    <li data-title="44444" class="hiSlider-item">
+                        <a href="http://baidu.com" target="_blank">
+                            <img src="{{ url_for('static', filename='images/4.jpg') }}" alt="44444">
+                        </a>
+                    </li>
+                    <li data-title="55555" class="hiSlider-item">
+                        <a href="http://baidu.com" target="_blank">
+                            <img src="{{ url_for('static', filename='images/5.jpg') }}" alt="55555">
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+
+        <div class="ui vertical segment">
+            <div class="ui raised segment">
+            </div>
+        </div>
     {% else %}
         {{ embed_html('auth/login.html') }}
     {% endif %}
@@ -26,12 +89,14 @@
 
 {% block scripts %}
     {{ super() }}
+    <script src="{{ url_for('static', filename='js/third_party/jquery.hiSlider.min.js') }}"></script>
     <script>
         $('#sign_up_icon').popup({
             position : 'right center',
             target   : '#sign_up_icon',
             title    : 'New to us?Sign Up'
         });
+        $('.hiSlider1').hiSlider();
     </script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <script src="{{ url_for('static', filename='js/auth/login.js') }}"></script>
