--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -150,7 +150,7 @@
 
             <div class="ui five special cards" style="margin-top: 1%">
 
-                <div class="black card">
+                <div class="teal card">
                     <div class="blurring dimmable image">
                         <div class="ui dimmer">
                             <div class="content">
