--- a/templates/vote/index.html
+++ b/templates/vote/index.html
@@ -10,6 +10,20 @@
         .select-btn {
             margin-left: 2%;
         }
+
+        .scroll-1::-webkit-scrollbar {
+            width:15px;
+            height:15px;
+        }
+        .scroll-1::-webkit-scrollbar-button    {
+            background-color:#ffffff;
+        }
+        .scroll-1::-webkit-scrollbar-track     {
+            background: #000000;
+        }
+        .scroll-1::-webkit-scrollbar-thumb{
+            background:#e0e0e0;
+        }
     </style>
 {% endblock %}
 
@@ -36,7 +50,39 @@
                             <i class="search icon"></i>
                             <input type="text" placeholder="Search tags...">
                         </div>
-                        <div class="scrolling menu">
+                        <div class="scrolling menu scroll-1">
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
+                            <div class="item" data-value="important">
+                                <div class="ui red empty circular label"></div>
+                                Important
+                            </div>
                             <div class="item" data-value="important">
                                 <div class="ui red empty circular label"></div>
                                 Important
@@ -58,7 +104,43 @@
                             <input type="text" placeholder="Search tags...">
                         </div>
 
-                        <div class="scrolling menu">
+                        <div class="scrolling menu scroll-1">
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
+                            <div class="item">
+                                <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
+                                Jenny Hess
+                            </div>
                             <div class="item">
                                 <img class="ui avatar image" src="http://www.semantic-ui.cn/images/avatar/small/jenny.jpg">
                                 Jenny Hess
