--- a/templates/vote/index.html
+++ b/templates/vote/index.html
@@ -661,7 +661,7 @@
 
                 </div>
 
-                <div class="blue ui buttons" style="margin-top: 1%">
+                <div class="black ui buttons" style="margin-top: 1%">
                     <button class="ui active button">1</button>
                     <button class="ui button">2</button>
                     <button class="ui button">3</button>
