--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     {% block styles %}  <!-- 样式区 -->
         <link rel="shortcut icon" href="{{ url_for('static', filename='icon/cack.ico') }}">
         <link rel="stylesheet" charset="utf-8" type="text/css" href="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.css">
+        <link rel="stylesheet" charset="utf-8" type="text/css" href="{{ url_for('static', filename='css/BeatPicker.css') }}">
         <style>
             .ui.toggle.checkbox input:focus:checked~.box:before, .ui.toggle.checkbox input:focus:checked~label:before {
                 background-color: rgba(0, 0, 0, 1) !important;
@@ -159,6 +160,7 @@
         <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
         <script src="//cdn.bootcss.com/semantic-ui/2.2.4/semantic.min.js"></script>
         <script src="{{ url_for('static', filename='js/third_party/ajaxfileupload.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/BeatPicker/BeatPicker.js') }}"></script>
         <script src="{{ url_for('static', filename='js/common.js') }}"></script>
         <script>
             function detailUserInfo() {
