--- a/templates/vote/index.html
+++ b/templates/vote/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="image content">
 
-            <div class="ui medium blurring dimmable image" id="add-vote-image">
+            <div class="ui blurring dimmable image" id="add-vote-image">
                 <div class="ui dimmer">
                     <div class="content">
                         <div class="center">
@@ -46,10 +46,10 @@
                         </div>
                     </div>
                 </div>
+                <img src="http://ojysw795f.bkt.clouddn.com/5924fd9ff3051f59f00721c3?imageMogr2/auto-orient/thumbnail/300x256!/format/png/blur/1x0/quality/75|imageslim">
                 <div id="cover_hidden_input">
                     <input type="file" name="file" hidden>
                 </div>
-                <img src="http://ojysw795f.bkt.clouddn.com/5924fd9ff3051f59f00721c3?imageMogr2/auto-orient/thumbnail/300x256!/format/png/blur/1x0/quality/75|imageslim">
             </div>
 
             <div class="description" style="width: 800px">
@@ -113,11 +113,11 @@
                     </div>
 
                     <div class="field">
-                        <label><strong>有效期</strong></label>
                         <div class="ui mini icon input">
                             <input class="" type="text" name="expired_at" data-beatpicker="true"
                                data-beatpicker-position="['*','*']"
                                data-beatpicker-disable="{from: {{ today }},to:'<'}"
+                               placeholder="有效期"
                             />
                         </div>
                     </div>
